# Terminal-Image-Processing-Program

./: CMakeLists.txt  README.md  main.cpp
include/: BMPImage.hpp  BMPImageLoad.hpp  BMPImageSave.hpp  BasicStructs.hpp  Controller.hpp  Filters.hpp
src/: BMPImage.cpp  BMPImageLoad.cpp  BMPImageSave.cpp  Controller.cpp  Filters.cpp
test/: test.cpp  tests
test/catch/header/: catch.hpp
